# careloop

JavaBackend/: pom.xml
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/AuthLoader/: AuthLoader.tsx
frontend/src/components/Button/: Button.module.scss  Button.tsx  Button.types.ts
frontend/src/components/Container/: Container.module.scss  Container.tsx
frontend/src/components/Form/: Form.tsx  Form.types.ts
frontend/src/css/: _theme.scss
frontend/src/guards/: guards.ts
frontend/src/router/: router.tsx
frontend/src/services/: app.services.ts  customBaseQuery.ts  getUserData.services.ts
frontend/src/types/: BackendError.types.ts
frontend/src/utils/: multipleClass.ts  tokens.utils.ts
python_backend/: config.py  main.py  pyproject.toml
python_backend/agent/: aggregator.py  base.py  fetcher.py  intake_panel.py  request.py  requests.py  reviewer.py
python_backend/alembic/: env.py
python_backend/alembic/versions/: 00b9cc958dce_patient_and_schedule.py  036ef49133cb_seeding.py  13250f720078_notification_enum_fix.py  5cb3d6a6096e_user_and_patient.py  86994bc40aa6_agent_and_panel_models.py  93ee28ab6ec3_seed.py
python_backend/auth/: auth_repo.py  auth_routes.py  auth_schema.py  auth_service.py
python_backend/dependencies/: auth.py  cors.py  deps.py  email_service.py  logger.py  otp_service.py  security.py  session.py
python_backend/models/: agent_model.py  panel_model.py  patient_disease_model.py  patient_documents_model.py  patient_model.py  schedule_model.py  user_model.py
(+100 files in other folders)
